--- a/mission_to_mars.ipynb
+++ b/mission_to_mars.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,6 +27,25 @@
     "\n",
     "# Create BeautifulSoup object; parse with 'lxml'\n",
     "soup = BeautifulSoup(response.text, 'lxml')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "News  – NASA’s Mars Exploration Program \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Extract title text and Paragragh Text. Assign the text to variables that you can reference later.\n",
+    "title = soup.title.text\n",
+    "print(title)"
    ]
   },
   {
