--- a/mission_to_mars.ipynb
+++ b/mission_to_mars.ipynb
@@ -10,7 +10,8 @@
     "import numpy as np\n",
     "from bs4 import BeautifulSoup\n",
     "import requests\n",
-    "import os"
+    "import os\n",
+    "from splinter import Browser"
    ]
   },
   {
@@ -31,21 +32,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "News  – NASA’s Mars Exploration Program \n"
+      "News  – NASA’s Mars Exploration Program \n",
+      "Managed by the Mars Exploration Program and the Jet Propulsion Laboratory for NASA’s Science Mission Directorate\n"
      ]
     }
    ],
    "source": [
     "# Extract title text and Paragragh Text. Assign the text to variables that you can reference later.\n",
     "title = soup.title.text\n",
-    "print(title)"
+    "print(title)\n",
+    "\n",
+    "paragraphs = soup.find_all('p')\n",
+    "for paragraph in paragraphs:\n",
+    "    print(paragraph.text)"
    ]
   },
   {
@@ -53,7 +59,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Use splinter to navigate the site and find the image url for the current Featured Mars Image and assign the url string to a variable called featured_image_url.\n",
+    "executable_path = {'executable_path': '/usr/local/bin/chromedriver'}\n",
+    "browser = Browser('chrome', **executable_path, headless=False)\n",
+    "url = https://www.jpl.nasa.gov/spaceimages/?search=&category=Mars\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
